# Paint-Inkspace

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
Commands/: BucketShapeCommand.cpp  BucketShapeCommand.h  ChangeStrokeColor.cpp  ChangeStrokeColor.h  ChangeStrokeSizeCommand.cpp  ChangeStrokeSizeCommand.h  ClipboardCommands.cpp  ClipboardCommands.h  Command.h  DeleteShapeCommand.cpp  DeleteShapeCommand.h  DrawShapeCommand.cpp  DrawShapeCommand.h  MoveShapeCommand.cpp  MoveShapeCommand.h  ResizeShapeCommand.cpp  ResizeShapeCommand.h
GUI/: AddandRemove_CW.cpp  CanvasWidget.cpp  CanvasWidget.h  CanvasWidget_1.cpp  CanvasWidget_2.cpp  Clipboard_CW.cpp  MainWindow.cpp  MainWindow.h  MainWindow_1.cpp  MainWindow_2.cpp  Move_Erase_CW.cpp  SelectShape_CW.cpp  TextToolBar.cpp  TextToolBar.h  ToolMenu.cpp  ToolMenu.h  getSVGDocument.cpp  loadSVGDocument_CW.cpp
History/: CommandManager.cpp  CommandManager.h
Parser/: SVGDocument.cpp  SVGDocument.h  SVGElement.cpp  SVGElement.h  SVGParser.h  SvgParser.cpp  SvgParser_1.cpp  SvgWriter.cpp  SvgWriter.h  XmlTokenizer.cpp  XmlTokenizer.h  XmlTokenizer_1.cpp
